Add UNREAD label to gmail watch